# ffxiv-discord-bot-resume

./: Cargo.toml  README.md
src/: achievement_list.rs  main.rs  resume.rs
