[package]
name = "ffxiv-resume"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.42.0"
shuttle-serenity = "0.42.0"
tokio = "1.26.0"
tracing = "0.1.37"
chrono = "0.4"
scraper = "0.19.0"
regex = "1.5.4"
reqwest = { version = "0.11", features = ["blocking"] }